Added shap values and LLM summary for explanation.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -328,6 +328,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "76edf0a0-e624-47ab-aca9-2495e7380eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6362620 entries, 0 to 6362619\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column          Dtype  \n",
+      "---  ------          -----  \n",
+      " 0   step            int64  \n",
+      " 1   type            object \n",
+      " 2   amount          float64\n",
+      " 3   nameOrig        object \n",
+      " 4   oldbalanceOrg   float64\n",
+      " 5   newbalanceOrig  float64\n",
+      " 6   nameDest        object \n",
+      " 7   oldbalanceDest  float64\n",
+      " 8   newbalanceDest  float64\n",
+      " 9   isFraud         int64  \n",
+      " 10  isFlaggedFraud  int64  \n",
+      "dtypes: float64(5), int64(3), object(3)\n",
+      "memory usage: 534.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "573ca646-4048-46a1-8ce7-82e3c2f915a9",
+   "metadata": {},
+   "source": [
+    "step: represents a unit of time where 1 step equals 1 hour\n",
+    "type: type of online transaction\n",
+    "amount: the amount of the transaction\n",
+    "nameOrig: customer starting the transaction\n",
+    "oldbalanceOrg: balance before the transaction\n",
+    "newbalanceOrig: balance after the transaction\n",
+    "nameDest: recipient of the transaction\n",
+    "oldbalanceDest: initial balance of recipient before the transaction\n",
+    "newbalanceDest: the new balance of recipient after the transaction\n",
+    "isFraud: fraud transaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6a5cff61-bd15-4c63-8c3b-0f46f6447dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df.duplicated(keep=False)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6588df3e-43fc-48da-99c3-6643fa5bd254",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "131a8a6a-2fbd-49d4-b039-2350c2bb613f",
+   "metadata": {},
+   "source": [
+    "No missing values and no duplicates"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e1ac5cf0-a353-4223-a572-7a2990dfc17f",
    "metadata": {},
@@ -337,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f3daf9ee-42a2-4916-80b2-e6cd1953c44a",
    "metadata": {},
    "outputs": [],
@@ -348,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f59d647f-05e7-4242-828a-8ea1021460f2",
    "metadata": {},
    "outputs": [],
@@ -360,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "ac17feae-1d02-42a9-86d6-f2cf2f288249",
    "metadata": {},
    "outputs": [],
@@ -371,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "19957d05-f7fc-4ea0-a24e-45f7cd2d07e3",
    "metadata": {},
    "outputs": [],
@@ -382,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "6319f56f-6912-4e24-bf06-e5e45b8fc405",
    "metadata": {},
    "outputs": [],
@@ -403,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "44f67361-9c48-4594-9505-0549234bd65a",
    "metadata": {},
    "outputs": [],
@@ -422,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d19cd5e2-f8dc-4ac9-bcb3-daad10103043",
    "metadata": {},
    "outputs": [],
@@ -434,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "1bad72ac-2faf-45b7-a4c3-9e3d17d57819",
    "metadata": {},
    "outputs": [
@@ -686,13 +788,42 @@
        "max           1.000000e+00         1.000000e+00        1.000000e+00  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85fef809-4b3f-4bf7-9e99-84f90ee608d4",
+   "metadata": {},
+   "source": [
+    "I wanted to create a feature, 'previous_transactions', that counts the number of past transactions between the same nameOrig and nameDest up to but not including the current step, ensuring that only transactions from earlier steps are considered. It excludes transactions within the same step, providing an accurate count of prior interactions for each transaction record. However, there are no previous history of 'nameOrig' and 'nameDest' in the dataset because they only appear once. But this feature can be useful if there is some history."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b704d867-88cb-4ab7-8d00-092973ed00ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df.duplicated(subset=['nameOrig', 'nameDest'], keep=False)])"
    ]
   },
   {
@@ -705,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "7e722614-f50a-40e2-8061-5109221a8fc8",
    "metadata": {},
    "outputs": [
@@ -718,7 +849,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "afbe072f-e286-4ecc-a23f-d2c791655243",
    "metadata": {},
    "outputs": [
@@ -782,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "5e72ba45-c261-4d34-8282-d1810b89b345",
    "metadata": {},
    "outputs": [
@@ -811,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "8526bd0d-2aba-4527-ae43-ad101ba30f03",
    "metadata": {},
    "outputs": [
@@ -848,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "b5aa676f-7dd1-45c2-9bb6-0299ccb152ac",
    "metadata": {},
    "outputs": [
@@ -870,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "cfe40fea-b48d-46bd-a710-264e59b1a657",
    "metadata": {},
    "outputs": [
@@ -899,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "a8b32fbb-37e7-4d77-b0f1-02f54f29ad0c",
    "metadata": {},
    "outputs": [
@@ -936,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "43478072-af10-4a01-b11f-f90613c39545",
    "metadata": {},
    "outputs": [
@@ -965,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "683c0bec-e58a-4e5d-8c95-c0d6925dcc64",
    "metadata": {},
    "outputs": [
@@ -990,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "71cd81e5-3c82-4114-b414-6d1f37db0a80",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "b58e37ae-15aa-457e-b7f2-c6439e95b03e",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "f11c89de-9fc6-4f31-b85e-490b4a50bf05",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "a69b8933-5877-4eb3-8e4c-8cd606a4ea12",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "e587ef09-709f-4fd8-b00c-660e30f275f9",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "e55ee179-51a9-4a95-bd55-8fa55c8899a1",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "0cc33f69-0a72-47e8-845e-01b3b72bbf35",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "271337ed-b40e-412c-86dc-4e70f01ae1ef",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "7a4d0488-dd00-48f7-ac6b-21504e83117c",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "f6d64584-014c-46fb-bcbb-fe457c5a7b2e",
    "metadata": {},
    "outputs": [],
